# spectra-enterprise

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  config.py  docker-compose.yml  exceptions.py  health_check.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg
.github/: ci-trigger.md
adapters/: aggregate_adapters_v2_r2.py  aggregate_adapters_v6_r2.py  alert_adapters_v4_r2.py  alert_adapters_v5.py  analyze_adapters_v3_r2.py  analyze_adapters_v7_r2.py  backpressure_adapters_v1_r2.py  backpressure_adapters_v5_r2.py  balance_adapters_v1.py  balance_adapters_v4_r2.py  balance_adapters_v9_r2.py  bulk_adapters_v3.py  census_adapters_v6.py  circuit_adapters_v4_r2.py  circuit_adapters_v9_r2.py  circuit_breaker_adapter.py  classify_adapters_v2_r2.py  classify_adapters_v6_r2.py  cluster_adapters_v1_r2.py  cluster_adapters_v9.py  compress_adapters_v1.py  compute_adapters_v4_r2.py  compute_adapters_v8_r2.py  correlate_adapters_v7.py  correlate_adapters_v9_r2.py  data_adapters_v4_r2.py  dedup_adapters_v8.py  dependency_adapters_v9.py  dependency_resolver_adapter.py  detect_adapters_v4_r2.py  detect_adapters_v5.py  disease_adapters_v4.py  disease_adapters_v8_r2.py  distribute_adapters_v7.py  encrypt_adapters_v7.py  encryption_layer_adapter.py  entity_adapters_v4_r2.py  entity_adapters_v8_r2.py  epidemic_adapters_v2.py  epidemic_adapters_v3_r2.py  (+121 more)
agents/: __init__.py  mcp_server.py  orchestrator.py  tools.py
api/: __init__.py  middleware.py  routes.py
benchmarks/: suite.py
ci/: pipeline.py
cli/: __init__.py  (+1 more)
(+8640 files in other folders)
