[metadata]
name = health-intelligence
version = 1.0.0
description = Health intelligence platform for disease surveillance and forecasting
author = Kaushik Sarkar
license = MIT

[options]
python_requires = >=3.11
packages = find:

[options.extras_require]
dev = pytest>=7.4.0, pytest-cov>=4.1.0, ruff>=0.1.0, mypy>=1.7.0

[tool:pytest]
testpaths = tests

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[ruff]
target-version = "py311"
line-length = 120
